--- a/barchart-feed-ddf-market/pom.xml
+++ b/barchart-feed-ddf-market/pom.xml
@@ -30,12 +30,12 @@
 
 	<dependencies>
 	
-		<dependency>
-  			<groupId>com.barchart.missive</groupId>
-			<artifactId>barchart-missive</artifactId>
-			<version>${barchartMissiveVersion}</version>
-			<scope>provided</scope>
-  		</dependency>
+<!-- 		<dependency> -->
+<!--   			<groupId>com.barchart.missive</groupId> -->
+<!-- 			<artifactId>barchart-missive</artifactId> -->
+<!-- 			<version>${barchartMissiveVersion}</version> -->
+<!-- 			<scope>provided</scope> -->
+<!--   		</dependency> -->
 
 		<dependency>
 			<groupId>com.barchart.feed</groupId>
