--- a/barchart-feed-ddf-client/pom.xml
+++ b/barchart-feed-ddf-client/pom.xml
@@ -53,24 +53,24 @@
 
 		<!-- missive -->
 
-		<dependency>
-  			<groupId>com.barchart.missive</groupId>
-			<artifactId>barchart-missive</artifactId>
-			<version>${barchartMissiveVersion}</version>
-  		</dependency>
+<!-- 		<dependency> -->
+<!--   			<groupId>com.barchart.missive</groupId> -->
+<!-- 			<artifactId>barchart-missive</artifactId> -->
+<!-- 			<version>${barchartMissiveVersion}</version> -->
+<!--   		</dependency> -->
 
 		<!-- protocol buffers - original -->
-		<dependency>
-			<groupId>com.google.protobuf</groupId>
-			<artifactId>protobuf-java</artifactId>
-			<version>${protoBufVersion}</version>
-		</dependency>	
+<!-- 		<dependency> -->
+<!-- 			<groupId>com.google.protobuf</groupId> -->
+<!-- 			<artifactId>protobuf-java</artifactId> -->
+<!-- 			<version>${protoBufVersion}</version> -->
+<!-- 		</dependency>	 -->
   		
-  		<dependency>
-  			<groupId>com.barchart.proto</groupId>
-  			<artifactId>barchart-proto-buf-inst</artifactId>
-			<version>${barchartProtoInstVersion}</version>
-  		</dependency>
+<!--   		<dependency> -->
+<!--   			<groupId>com.barchart.proto</groupId> -->
+<!--   			<artifactId>barchart-proto-buf-inst</artifactId> -->
+<!-- 			<version>${barchartProtoInstVersion}</version> -->
+<!--   		</dependency> -->
 
 		<dependency>
 			<groupId>io.netty</groupId>
@@ -80,11 +80,11 @@
 		</dependency>
 		
 		<!-- berkeley db --> 
-  		<dependency>
-			<groupId>com.sleepycat</groupId>
-			<artifactId>je</artifactId>
-			<version>${bdbjeVersion}</version>
-		</dependency>
+<!--   		<dependency> -->
+<!-- 			<groupId>com.sleepycat</groupId> -->
+<!-- 			<artifactId>je</artifactId> -->
+<!-- 			<version>${bdbjeVersion}</version> -->
+<!-- 		</dependency> -->
 
 	</dependencies>
 
