--- a/barchart-feed-ddf-historical/pom.xml
+++ b/barchart-feed-ddf-historical/pom.xml
@@ -30,12 +30,12 @@
 	
 	<dependencies>
 
-		<dependency>
-  			<groupId>com.barchart.missive</groupId>
-			<artifactId>barchart-missive</artifactId>
-			<version>${barchartMissiveVersion}</version>
-			<scope>provided</scope>
-  		</dependency>
+<!-- 		<dependency> -->
+<!--   			<groupId>com.barchart.missive</groupId> -->
+<!-- 			<artifactId>barchart-missive</artifactId> -->
+<!-- 			<version>${barchartMissiveVersion}</version> -->
+<!-- 			<scope>provided</scope> -->
+<!--   		</dependency> -->
 
 		<dependency>
 			<groupId>com.barchart.feed</groupId>
@@ -52,7 +52,7 @@
 		<dependency>
 			<groupId>com.barchart.util</groupId>
 			<artifactId>barchart-util-bench</artifactId>
-			<version>${barchartUtilVersion}</version>
+			<version>[2-SNAPSHOT,3-SNAPSHOT)</version>
 		</dependency>
 		
 	</dependencies>
