--- a/barchart-feed-ddf-resolver/pom.xml
+++ b/barchart-feed-ddf-resolver/pom.xml
@@ -43,12 +43,12 @@
 			<version>3.5.0</version>
 		</dependency>
 		
-		<dependency>
-  			<groupId>com.barchart.missive</groupId>
-			<artifactId>barchart-missive</artifactId>
-			<version>${barchartMissiveVersion}</version>
-			<scope>provided</scope>
-  		</dependency>
+<!-- 		<dependency> -->
+<!--   			<groupId>com.barchart.missive</groupId> -->
+<!-- 			<artifactId>barchart-missive</artifactId> -->
+<!-- 			<version>${barchartMissiveVersion}</version> -->
+<!-- 			<scope>provided</scope> -->
+<!--   		</dependency> -->
 
 	</dependencies>
 
