--- a/barchart-feed-ddf-util/pom.xml
+++ b/barchart-feed-ddf-util/pom.xml
@@ -33,25 +33,25 @@
 		<dependency>
 			<groupId>com.barchart.util</groupId>
 			<artifactId>barchart-util-clone</artifactId>
-			<version>2.0.28</version>
+			<version>[2-SNAPSHOT,3-SNAPSHOT)</version>
 		</dependency>
 	
 		<dependency>
 			<groupId>com.barchart.util</groupId>
 			<artifactId>barchart-util-collections</artifactId>
-			<version>2.0.31</version>
+			<version>[2-SNAPSHOT,3-SNAPSHOT)</version>
 		</dependency>
 	
-		<dependency>
-			<groupId>com.barchart.util</groupId>
-			<artifactId>barchart-util-thread</artifactId>
-			<version>2.0.29</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>com.barchart.util</groupId> -->
+<!-- 			<artifactId>barchart-util-thread</artifactId> -->
+<!-- 			<version>2.0.29</version> -->
+<!-- 		</dependency> -->
 	
 		<dependency>
 			<groupId>com.barchart.util</groupId>
 			<artifactId>barchart-util-enums</artifactId>
-			<version>${barchartUtilVersion}</version>
+			<version>[2-SNAPSHOT,3-SNAPSHOT)</version>
 		</dependency>
 		
 		<dependency>
@@ -60,12 +60,13 @@
 			<version>2.1.0</version>
 		</dependency>
 
-		<dependency>
-			<groupId>com.barchart.feed</groupId>
-			<artifactId>barchart-feed-api</artifactId>
-			<version>[2.0.0,2.1.0)</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>com.barchart.feed</groupId> -->
+<!-- 			<artifactId>barchart-feed-api</artifactId> -->
+<!-- 			<version>[2.0.0,2.1.0)</version> -->
+<!-- 		</dependency> -->
 
+		<!-- FIXME should depend on value-api only -->
 		<dependency>
 			<groupId>com.barchart.feed</groupId>
 			<artifactId>barchart-feed-inst</artifactId>
