--- a/pom.xml
+++ b/pom.xml
@@ -32,19 +32,19 @@
 
 	<properties>
 
-		<barchartUtilVersion>2.0.28</barchartUtilVersion>
+<!-- 		<barchartUtilVersion>2.0.28</barchartUtilVersion> -->
 
-		<barchartFeedAPIVersion>[2-SNAPSHOT,3-SNAPSHOT)</barchartFeedAPIVersion>
+<!-- 		<barchartFeedAPIVersion>[2-SNAPSHOT,3-SNAPSHOT)</barchartFeedAPIVersion> -->
 		<barchartFeedInstVersion>[2-SNAPSHOT,3-SNAPSHOT)</barchartFeedInstVersion>
 		<barchartFeedBaseVersion>[2-SNAPSHOT,3-SNAPSHOT)</barchartFeedBaseVersion>
-		<barchartFeedClientVersion>[2-SNAPSHOT,3-SNAPSHOT)</barchartFeedClientVersion>
+<!-- 		<barchartFeedClientVersion>[2-SNAPSHOT,3-SNAPSHOT)</barchartFeedClientVersion> -->
 
-		<barchartMissiveVersion>2.0.0</barchartMissiveVersion>
+<!-- 		<barchartMissiveVersion>2.0.0</barchartMissiveVersion> -->
 		<barchartNettyVersion>3.5.12.Final</barchartNettyVersion>
-		<barchartProtoInstVersion>1.2.0</barchartProtoInstVersion>
+<!-- 		<barchartProtoInstVersion>1.2.0</barchartProtoInstVersion> -->
 
-		<bdbjeVersion>4.0.92</bdbjeVersion>
-		<protoBufVersion>2.4.1</protoBufVersion>
+<!-- 		<bdbjeVersion>4.0.92</bdbjeVersion> -->
+<!-- 		<protoBufVersion>2.4.1</protoBufVersion> -->
 
 	</properties>
 
