no version for utils export

--- a/barchart-feed-ddf-assembly/pom.xml
+++ b/barchart-feed-ddf-assembly/pom.xml
@@ -199,7 +199,7 @@
 						</Embed-Dependency>
 						<Embed-Transitive>true</Embed-Transitive>
 						<Export-Package>
-							com.barchart.util.*;version=${barchartUtilVersion},
+							com.barchart.util.*,
 							com.barchart.feed.base.*;version=${barchartFeedVersion},
 							com.barchart.feed.client.*;version=${barchartFeedVersion},
 							com.barchart.feed.ddf.*;version=${project.parent.version},
