--- a/barchart-feed-ddf-assembly/pom.xml
+++ b/barchart-feed-ddf-assembly/pom.xml
@@ -87,7 +87,7 @@
 			<groupId>com.sleepycat</groupId>
 			<artifactId>je</artifactId>
 			<version>${bdbjeVersion}</version>
-			<scope>provided</scope>
+			<scope>optional</scope>
 		</dependency>
 
 		<dependency>
