--- a/barchart-feed-ddf-assembly/pom.xml
+++ b/barchart-feed-ddf-assembly/pom.xml
@@ -204,6 +204,7 @@
 						<Import-Package>
 							<!-- jackson is optional dependency from legacy util-values -->
 							!org.codehaus.jackson.*,
+							!org.junit.*,
 							*,
 						</Import-Package>
 						<Embed-Dependency>
