--- a/barchart-feed-ddf-util/pom.xml
+++ b/barchart-feed-ddf-util/pom.xml
@@ -42,11 +42,11 @@
 			<version>[2-SNAPSHOT,3-SNAPSHOT)</version>
 		</dependency>
 	
-<!-- 		<dependency> -->
-<!-- 			<groupId>com.barchart.util</groupId> -->
-<!-- 			<artifactId>barchart-util-thread</artifactId> -->
-<!-- 			<version>2.0.29</version> -->
-<!-- 		</dependency> -->
+ 		<dependency> 
+			<groupId>com.barchart.util</groupId>
+			<artifactId>barchart-util-ascii</artifactId>
+			<version>[2-SNAPSHOT,3-SNAPSHOT)</version>
+		</dependency>
 	
 		<dependency>
 			<groupId>com.barchart.util</groupId>
@@ -59,12 +59,6 @@
 			<artifactId>barchart-util-anno</artifactId>
 			<version>2.1.0</version>
 		</dependency>
-
-<!-- 		<dependency> -->
-<!-- 			<groupId>com.barchart.feed</groupId> -->
-<!-- 			<artifactId>barchart-feed-api</artifactId> -->
-<!-- 			<version>[2.0.0,2.1.0)</version> -->
-<!-- 		</dependency> -->
 
 		<!-- FIXME should depend on value-api only -->
 		<dependency>
