--- a/barchart-feed-ddf-assembly/pom.xml
+++ b/barchart-feed-ddf-assembly/pom.xml
@@ -132,6 +132,7 @@
 							<includeGroupIds>com.barchart.feed,com.barchart.util</includeGroupIds>
 							<failOnMissingClassifierArtifact>false</failOnMissingClassifierArtifact>
 							<outputDirectory>${unpackSource}</outputDirectory>
+							<excludeArtifactIds>rx</excludeArtifactIds>
 						</configuration>
 					</execution>
 				</executions>
