--- a/barchart-feed-ddf-util/pom.xml
+++ b/barchart-feed-ddf-util/pom.xml
@@ -31,14 +31,14 @@
 	<dependencies>
 	
 		<dependency>
-			<groupId>com.barchart.util</groupId>
-			<artifactId>barchart-util-clone</artifactId>
+			<groupId>com.barchart.feed</groupId>
+			<artifactId>barchart-feed-base</artifactId>
 			<version>[2-SNAPSHOT,3-SNAPSHOT)</version>
 		</dependency>
 	
 		<dependency>
 			<groupId>com.barchart.util</groupId>
-			<artifactId>barchart-util-collections</artifactId>
+			<artifactId>barchart-util-clone</artifactId>
 			<version>[2-SNAPSHOT,3-SNAPSHOT)</version>
 		</dependency>
 	
