--- a/barchart-feed-ddf-util/pom.xml
+++ b/barchart-feed-ddf-util/pom.xml
@@ -46,7 +46,7 @@
 		<dependency>
 			<groupId>com.barchart.feed</groupId>
 			<artifactId>barchart-feed-inst</artifactId>
-			<version>${barchartFeedInstVersion}</version>
+			<version>[2.0.8-SNAPSHOT,3-SNAPSHOT)</version>
 		</dependency>
 
 	</dependencies>
