--- a/barchart-feed-ddf-util/pom.xml
+++ b/barchart-feed-ddf-util/pom.xml
@@ -48,6 +48,13 @@
 			<artifactId>barchart-feed-inst</artifactId>
 			<version>[2.0.9-SNAPSHOT,3-SNAPSHOT)</version>
 		</dependency>
+		
+		<!-- Logging framework. -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
 
 	</dependencies>
 
