--- a/barchart-feed-ddf-message/pom.xml
+++ b/barchart-feed-ddf-message/pom.xml
@@ -41,6 +41,13 @@
 			<artifactId>barchart-util-common</artifactId>
 			<version>[1-SNAPSHOT,2-SNAPSHOT)</version>
 		</dependency>
+		
+		<!-- Logging framework. -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
 
 	</dependencies>
 
