--- a/barchart-feed-ddf-instrument/pom.xml
+++ b/barchart-feed-ddf-instrument/pom.xml
@@ -39,13 +39,20 @@
 		<dependency>
 			<groupId>com.barchart.feed</groupId>
 			<artifactId>barchart-feed-base</artifactId>
-			<version>${barchartFeedBaseVersion}</version>
+			<version>[2.0.8-SNAPSHOT, 3-SNAPSHOT]</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>barchart-util-enums</artifactId>
 					<groupId>com.barchart.util</groupId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		
+		<!-- Logging framework. -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<scope>provided</scope>
 		</dependency>
 		
 	</dependencies>
