Changed execution phase to workaround Maven plugin execution order bug

--- a/barchart-feed-ddf-assembly/pom.xml
+++ b/barchart-feed-ddf-assembly/pom.xml
@@ -166,7 +166,7 @@
 				<executions>
 					<execution>
 						<id>attach-sources</id>
-						<phase>prepare-package</phase>
+						<phase>package</phase>
 						<goals>
 							<goal>jar-no-fork</goal>
 						</goals>
@@ -181,7 +181,7 @@
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
-						<phase>prepare-package</phase>
+						<phase>package</phase>
 						<goals>
 							<goal>jar</goal>
 						</goals>
