--- a/barchart-feed-ddf-test/pom.xml
+++ b/barchart-feed-ddf-test/pom.xml
@@ -12,9 +12,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>com.barchart.feed</groupId>
-		<artifactId>barchart-feed-ddf</artifactId>
-		<version>4.2.34-SNAPSHOT</version>
+		<groupId>com.barchart.base</groupId>
+		<artifactId>barchart-archon</artifactId>
+		<version>2.6.29</version>
 	</parent>
 
 	<artifactId>barchart-feed-ddf-test</artifactId>
@@ -26,7 +26,7 @@
 		<url>https://github.com/barchart/barchart-feed-ddf</url>
 		<connection>scm:git:git://github.com/barchart/barchart-feed-ddf.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/barchart/barchart-feed-ddf.git</developerConnection>
-	  <tag>master</tag>
+	  	<tag>master</tag>
   </scm>
 
 	<dependencies>
@@ -35,13 +35,13 @@
 		<dependency>
 			<groupId>com.barchart.feed</groupId>
 			<artifactId>barchart-feed-ddf-client</artifactId>
-			<version>${project.parent.version}</version>
+			<version>[4-SNAPSHOT, 5-SNAPSHOT)</version>
 		</dependency>
 
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty</artifactId>
-			<version>${barchartNettyVersion}</version>
+			<version>3.5.12.Final</version>
 			<scope>provided</scope>
 		</dependency>
 		
@@ -49,7 +49,10 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
 		</dependency>
 
 	</dependencies>
