Removed duplicate source upload

--- a/barchart-feed-ddf-assembly/pom.xml
+++ b/barchart-feed-ddf-assembly/pom.xml
@@ -163,7 +163,7 @@
 				</configuration>
 				<executions>
 					<execution>
-						<id>attach-sources</id>
+						<id>attach-sources-no-fork</id>
 						<phase>package</phase>
 						<goals>
 							<goal>jar-no-fork</goal>
