--- a/barchart-feed-ddf-util/pom.xml
+++ b/barchart-feed-ddf-util/pom.xml
@@ -1,13 +1,7 @@
-<!--
-
-    Copyright (C) 2011-2012 Barchart, Inc. <http://www.barchart.com />
-
-    All rights reserved. Licensed under the OSI BSD License.
-
-    http://www.opensource.org/licenses/bsd-license.php
-
--->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<!-- Copyright (C) 2011-2012 Barchart, Inc. <http://www.barchart.com /> All 
+	rights reserved. Licensed under the OSI BSD License. http://www.opensource.org/licenses/bsd-license.php -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
@@ -25,30 +19,30 @@
 		<url>https://github.com/barchart/barchart-feed-ddf</url>
 		<connection>scm:git:git://github.com/barchart/barchart-feed-ddf.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/barchart/barchart-feed-ddf.git</developerConnection>
-	  <tag>master</tag>
-  </scm>
+		<tag>master</tag>
+	</scm>
 
 	<dependencies>
-	
+
 		<dependency>
 			<groupId>com.barchart.feed</groupId>
 			<artifactId>barchart-feed-base</artifactId>
-			<version>[2.0.8-SNAPSHOT,3-SNAPSHOT)</version>
+			<version>[2.0.61,3-SNAPSHOT)</version>
 		</dependency>
-	
- 		<dependency> 
+
+		<dependency>
 			<groupId>com.barchart.util</groupId>
 			<artifactId>barchart-util-common</artifactId>
 			<version>[1-SNAPSHOT,2-SNAPSHOT)</version>
 		</dependency>
-	
+
 		<!-- FIXME should depend on value-api only -->
 		<dependency>
 			<groupId>com.barchart.feed</groupId>
 			<artifactId>barchart-feed-inst</artifactId>
-			<version>[2.0.9-SNAPSHOT,3-SNAPSHOT)</version>
+			<version>[2.0.25,3-SNAPSHOT)</version>
 		</dependency>
-		
+
 		<!-- Logging framework. -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
